Added docs for Credentials
